--- a/index.html
+++ b/index.html
@@ -1,12 +1,156 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/fbf7ce7942.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <title>CV Natalia Castro</title>
 </head>
 <body>
+      <nav class="navbar navbar-expand-lg bg-dark">
+        <div class="container-fluid">
+            <a class="navbar-brand col-9" href="#">
+               <img src="assets/img/logoargenprog.png" alt="" width="30%" height="">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav col-3 me-auto mb-2 mb-lg-0">
+                  <ul class="list-group list-group-horizontal">
+                      <li class="list-group-item"><i class="fa-brands fa-instagram fa-2xl"></i></li>
+                      <li class="list-group-item"><i class="fa-brands fa-linkedin fa-2xl"></i></li>
+                      <li class="list-group-item"><i class="fa-brands fa-behance fa-2xl"></i></li>
+                      <li class="list-group-item"><i class="fa-brands fa-youtube fa-2xl"></i></li>
+                      <!-- Button trigger modal -->
+                      <li class="list-group-item"><i class="fa-solid fa-user fa-2xl"  type="button" data-bs-toggle="modal" data-bs-target="#exampleModal"></i></li>
+                  </ul>
+                       <!--Modal -->
+                  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                      <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                              <h5 class="modal-title" id="exampleModalLabel">Login</h5>
+                              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                              <form>
+                                <div class="mb-3">
+                                  <label for="exampleInputEmail1" class="form-label">Ingrese dirección de correo electrónico</label>
+                                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                                  <div id="emailHelp" class="form-text">Mantendremos la privacidad de sus datos</div>
+                                </div>
+                                <div class="mb-3">
+                                  <label for="exampleInputPassword1" class="form-label">Contraseña</label>
+                                  <input type="password" class="form-control" id="exampleInputPassword1">
+                                </div>
+                              </form>
+                            </div>
+                            <div class="modal-footer">
+                              <button type="button" style="background-color:rgb(170, 70, 95)" class="btn btn-dark">Iniciar Sesión</button>
+                            </div>
+                        </div>
+                      </div>
+                  </div>
+              </ul>
+            </div>
+        </div>
+      </nav>                
+      <main>
+          <section>
+              <div class="flex-container">
+                  <img class="img-fluid" src="assets/img/escritorio1.jpg" alt="escritorio">
+                  <div id="#" class="h1"><h1><b>Natalia Castro</b></h1>
+                    <h2 class="minombre">Web Developer Jr / Comunicación Multimedial </h2>  
+                  </div>              
+          </section>
+          <h3><b>Acerca de mi</b></h3>
+          <section style="background-color: rgb(23, 23, 24)">
+            <div class="container">
+                <div class="row">         
+                  <div class="col-xs-12 col-sm-12 col-lg-6">
+                    <img class="mifoto" src="assets/img/mifotocv.jpg" alt="mi foto">
+                    <a class="editar" href="#">
+                      <i class="fa-sharp fa-solid fa-pen"></i>
+                    </a>
+                    <a class="borrar" href="#">
+                      <i class="fa-sharp fa-solid fa-trash"></i>
+                    </a>
+                  </div>     
+                    <div class=" col-xs-12 col-sm-12 col-lg-6 ">
+                      <a class="editar" href="#">
+                        <i class="fa-sharp fa-solid fa-pen"></i>
+                      </a>
+                      <a class="borrar" href="#">
+                        <i class="fa-sharp fa-solid fa-trash"></i>
+                      </a> 
+                            
+                      <p>Soy una mujer muy tenáz, dinámica, responsable, creativa entre otras cualidades</p>
+                      <p>Actualmente me dedico al area de Comunicación Multimedial</p>
+                      <p>Tengo la experiencia de escuchar y entender al cliente</p>
+                      <p>¡Así que trabajemos juntos para encontrar soluciones!</p>      
+                    </div> 
+                </div>
+            </div>         
+        </section>   
+
+          <h3><b>Experiencia</b></h3>
+        <section style="background-color: rgb(23, 23, 24);">           
+            <div class="container">
+                <div class="row">                
+                    <div class="col">
+                      <a class="editar" href="#">
+                        <i class="fa-sharp fa-solid fa-pen"></i>
+                      </a>
+                      <a class="borrar" href="#">
+                        <i class="fa-sharp fa-solid fa-trash"></i>
+                      </a>
+                      <p>Experiencia en Multimedia</p>
+                      <p>Editora de videos en premiere</p>
+                      <p>Editora de fotografías Photoshop</p>
+                      <p>Desarrollo web en HTML, CSS, Bootstrap y Angular.</p>
+                      <p>Conocimientos en Marketing digital, estrategia y campañas en redes sociales</p>
+                    </div>
+                </div>       
+            </div>
+              <hr class="line"/>       
+        </section>      
+          <h3><b>Educación</b></h3>   
+      <section style="background-color: rgb(23, 23, 24)">
+        <div class="container">
+            <div class="row">
+                <div class="col">
+                  <a class="editar" href="#">
+                    <i class="fa-sharp fa-solid fa-pen"></i>
+                  </a>
+                  <a class="borrar" href="#">
+                    <i class="fa-sharp fa-solid fa-trash"></i>
+                  </a>
+                    <p>Instituto Tecnológico Beltrán. Comunicación Multimedial. Año 2021 al 2023</p>
+                    <p>Argentina Programa. Desarrollo Full Stack Junior. Año 2022</p>
+                    <p>Escuela DaVinci. Marketing Digital. Año 2021</p>
+                    <p>Universidad del Atlántico. Arquitectura. Año 2002 al 2008</p>
+                </div>        
+            </div>
+      </section>
+    </main>
+    <footer class="footer">
+        <div class="container-fluid">
+          <div class="row">
+            <div class="col-xs-0 col-sm-0 col-lg-4"></div>
+            <ul class="list-group list-group-horizontal col-xs-12 col-sm-12 col-lg-4">
+                <li class="list-group-item"><i class="fa-brands fa-instagram fa-2xl"></i></li>
+                <li class="list-group-item"><i class="fa-brands fa-linkedin fa-2xl"></i></li>
+                <li class="list-group-item"><i class="fa-brands fa-behance fa-2xl"></i></li>
+                <li class="list-group-item"><i class="fa-brands fa-youtube fa-2xl"></i></li>
+            </ul>
+            <div class="col-xs-0 col-sm-0 col-lg-4"></div>
+          </div>
+        </div>        
+    </footer>
     
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>   
 </body>
 </html>
